--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
@@ -1,100 +1,9 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:fragment="page_head(title)">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
-
-	<title>[[${title}]]</title>
-	
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />		
-	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" ></script>
-	<script type="text/javascript" th:src="@{/js/common.js}" ></script>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_head('Categories - BuyMe Admin', 'none')" />
 <body>
 <div class="container-fluid">
-	<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<a class="navbar-brand" th:href="@{/}"> <img alt="Logo.png"
-					th:src="@{/images/BuyMeAdminSmall.png}">
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#topNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="topNavbar">
-					<ul class="navbar-nav">
-						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-						<a class="nav-link" th:href="@{/users}">Users</a>
-						</li>
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/categories}">Categories</a></li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a>
-						</li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor','Salesperson','Shipper')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/products}">Products</a></li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/customers}">Customers</a></li>
-						</th:block>	
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-							<li class="nav-item"><a class="nav-link"
-								th:href="@{/shipping}">Shipping</a></li>
-						</th:block>	
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson','Shipper')">
-							<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a>
-						</li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-						<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
-								Report</a></li>
-						</th:block>	
-							
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/articles}">Articles</a></li>
-						</th:block>	
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">	
-						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
-						</li>
-						</th:block>
-						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-						<a class="nav-link"
-							th:href="@{/settings}">Settings</a></li>
-						<li>
-							<span class="fas fa-user fa-2x" style="color:white;"></span>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
-								th:href="@{/account}"
-							 sec:authentication="principal.fullname"></a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" id="logoutlink" href="">Logout</a>
-							</div>
-						</li>
-							
-					</ul>
-					<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
-						<input type="submit" />
-					</form>			
-					
-				</div>
-
-			</nav>
-		</div>
+	<div th:replace="navigation :: menu"></div>
 	<div>
 		<h2>Manage Categories</h2>	
 		
@@ -102,40 +11,20 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<a th:href="@{/categories/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-2"></a>
 				
 	</div>
+		
+	<div th:replace="fragments :: search_form_and_message('/categories/page/1')" />
 	
-	<div th:if="${message!=null}" class="alert alert-success text-center">[[${message}]]</div>
-	
-	<div>	
-	<form th:action="@{/categories/page/1}" class="form-inline m-3">
-			
-			Filter:&nbsp;
-			<input type="search" name="keyword" th:value="${keyword}" class="form-control" required/>
-			&nbsp;&nbsp;
-			<button type="submit" class="btn btn-primary">
-				<i class="fas fa-search"></i>
-			</button>
-			&nbsp;&nbsp;
-			<button type="button" class="btn btn-secondary" onclick="clearFilter()">
-				<i class="fas fa-eraser"></i>
-			</button>
-		</form>
-	</div>
 	<div class="full-details">
 		<table class="table table-bordered table-striped table-hover table-responsive-xl">
 			<thead class="thead-dark">
 				<tr>
 					<th>ID</th>
-					<th>
-						Category Image
-					</th>
-					<th>
-						<a class="text-white" th:href="@{'/categories?sortDir=' + ${reverseSortDir}}">Category Name</a>
-						<span th:class="${reverseSortDir =='desc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-					</th>
-					<th>Alias</th>
+					<th>Category Image</th>
+					<th th:replace="fragments :: column_link('/categories', 'name', 'Category Name', 'none')" />						
+					<th class="hideable-column">Alias</th>
 					<th>Enabled</th>
 					<th></th>
-				</tr>
+				</tr>								
 			</thead>
 			<tbody>
 				<tr th:each="cat : ${listCategories}">
@@ -144,103 +33,63 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 						<img th:src="@{${cat.imagePath}}" style="width: 100px" class="img-fluid"/>
 					</td>
 					<td>[[${cat.name}]]</td>
-					<td>[[${cat.alias}]]</td>
-					<td><a th:if="${cat.enabled == true}"
-							class="fas fa-check-circle" style="color:green" th:href="@{'/categories/' + ${cat.id} + '/enabled/false'}" title="disable this category"></a>
-							<a
-							th:if="${cat.enabled == false}"
-							class="fas fa-check-circle" style="color:red" th:href="@{'/categories/' + ${cat.id} + '/enabled/true'}" title="enable this category"></a>
-						</td>
+					<td class="hideable-column">[[${cat.alias}]]</td>
 					<td>
-						<a class="fas fa-edit"
-							th:href="@{'/categories/edit/' + ${cat.id}}" title="Edit this category"></a>
-							&nbsp;
-						<th:block th:if="${cat.hasChildren == false}">	 
-						<a class="fas fa-trash-alt link-delete"
-							th:href="@{'/categories/delete/' + ${cat.id}}" th:entityId="${cat.id}"
-							title="Delete this category"></a>
-						</td>
-						<th:block>
-					
+						<div th:replace="fragments :: status(${cat.enabled}, 'category', '/categories/' + ${cat.id})" />
+					</td>
+					<td>
+						<div th:replace="fragments :: edit('category', '/categories/edit/' + ${cat.id})" />
+						&nbsp; 
+						<div th:replace="fragments :: delete('category', ${cat.id}, '/categories/delete/' + ${cat.id}, ${!cat.hasChildren})" />						
+					</td>					
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<div class="text-center">
-			<p>BuyMe Control Panel -Copyright &copy; BuyMe</p>
-		</div>
-</div>
-
-<div class="modal fade text-center" id="confirmModal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-tittle">Delete Confirmation</h4>
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-				</div>
-				<div class="modal-body">
-					<span id="confirmText"></span>
-				</div>
-				<div class="modal-footer">
-					<a class="btn btn-success" href="" id="yesButton">Yes</a>
-					<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+	
+	<div class="less-details">
+		<div th:each="cat : ${listCategories}" class="row m-1">
+			<div class="col-4">
+				<img th:src="@{${cat.imagePath}}" style="width: 100px" class="img-fluid"/>			
+			</div>
+			<div class="col-8">
+				<div>[[${cat.name}]]</div>
+				<div class="mt-2">
+					<div th:replace="fragments :: status(${cat.enabled}, 'category', '/categories/' + ${cat.id})" />
+					&nbsp; 			
+					<div th:replace="fragments :: edit('category', '/categories/edit/' + ${cat.id})" />
+					&nbsp;
+					<div th:replace="fragments :: delete('category', ${cat.id}, '/categories/delete/' + ${cat.id}, ${!cat.hasChildren})" />
 				</div>
 			</div>
-		</div>
+			<div>&nbsp;</div>
+		</div>	
+	</div>
+		
+	<div th:if="${keyword != null}" class="text-center">
+		<span>Search result does not show categories in hierarchical form</span>
+		<div th:replace="fragments :: pagination('/categories', 'categories')"></div>
 	</div>
 	
-	<div class="text-center m-1" th:if="${totalItems > 0}">
-			<span>Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
-		</div>
-		<div class="text-center m-1" th:unless="${totalItems > 0}">
-			<span>No users found</span>
-		</div>
+	<th:block th:unless="${keyword != null}">
+	<div th:replace="fragments :: pagination('/categories', 'top-level categories')"></div>
+	</div>
 	
-	<div th:if ="${totalPages > 1}">
-			<nav>
-	  			<ul class="pagination justify-content-center">
-	    		<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-	    			<a class="page-link" th:href="@{'/categories/page/1? + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">First</a>
-	    		</li>
-	    		<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-	    			<a class="page-link" th:href="@{'/categories/page/' + ${currentPage - 1}  + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Previous</a>
-	    		</li>
-	    		
-	    		<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-	    			th:each ="i: ${#numbers.sequence(1, totalPages)}">
-	    			<a class="page-link" th:href="@{'/categories/page/' + ${i} +  '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">[[${i}]]</a>
-	    		</li>
-	   		 	
+	<div th:replace="modal_fragments :: confirm_modal" />
 	
-	    		<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-	    			<a class="page-link" th:href="@{'/categories/page/' + ${currentPage + 1} + ${sortField} + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Next</a>
-	    		</li>
-	    		<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-	    			<a class="page-link" th:href="@{'/categories/page/' + ${totalPages} + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Last</a>
-	    		</li>
-	  			</ul>
-			</nav>
-		</div>
-  
+	<div th:replace="fragments :: footer"></div>
+	
+</div>
+<script th:src="@{/js/common_list.js}"></script>
 <script type="text/javascript">
+	moduleURL = "[[@{/categories}]]";
 
-	$(document).ready(function(){
-		$(".link-delete").on("click",function(e){
+	$(document).ready(function() {
+		$(".link-delete").on("click", function(e) {
 			e.preventDefault();
-			showDeleteConfirmModal($(this),'category');
+			showDeleteConfirmModal($(this), 'category');
 		});
 	});
-
-	function showDeleteConfirmModal(link, entityName){
-		entityId = link.attr("entityId");
-		$("#yesButton").attr("href",link.attr("href"));
-		$("#confirmText").text("Are you sure you want to delete this" + entityName + " ID " + entityId + "?");
-		$("#confirmModal").modal();
-	}
-	
-	function clearFilter(){
-		window.location="[[@{/categories}]]";
-	}
 </script>
 </body>
 </html>
