--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
@@ -1,267 +1,115 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-
-<title> Manage Categories | [[${pageTitle}]]</title>
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript"
-	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_head(${pageTitle}, 'none')" />
 <body>
-	<div class="container-fluid">
-		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<a class="navbar-brand" th:href="@{/}"> <img alt="Logo.png"
-					th:src="@{/images/BuyMeAdminSmall.png}">
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#topNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="topNavbar">
-					<ul class="navbar-nav">
-						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-						<a class="nav-link" th:href="@{/users}">Users</a>
-						</li>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/categories}">Categories</a></li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a>
-						</li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor','Salesperson','Shipper')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/products}">Products</a></li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/customers}">Customers</a></li>
-						</th:block>	
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-							<li class="nav-item"><a class="nav-link"
-								th:href="@{/shipping}">Shipping</a></li>
-						</th:block>	
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson','Shipper')">
-							<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a>
-						</li>
-						</th:block>
-						
-						<th:block sec:authorize="hasAnyAuthority('Admin','Salesperson')">
-						<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
-								Report</a></li>
-						</th:block>	
-							
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/articles}">Articles</a></li>
-						</th:block>	
-						<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">	
-						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
-						</li>
-						</th:block>
-						
-						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-						<a class="nav-link"
-							th:href="@{/settings}">Settings</a></li>
-					</ul>
-				</div>
-
-			</nav>
-		</div>
-		<div>
-			<h1>Manage Categories | [[${pageTitle}]]</h1>
-		</div>
-
-		
-		<!-- enctype allows file upload for photo -->
-		<form th:action="@{/categories/save}" method="POST"
-			style="max-width: 500px; margin: 0 auto" 
-			enctype="multipart/form-data"
-			onsubmit="return checkUnique(this)"
-			th:object="${category}">
-			
-			<!-- hidden so id not known -->
-			<input type="hidden" th:field="*{id}" />
-			
-			<div class="border border-secondary rounded p-3">
-				
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Category Name:</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" th:field="*{name}"
-							required minlength="3" maxlength="128" />
-					</div>
-				</div>
-				
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Alias</label>
-					<div class="col-sm-8">
-						<input type="text" class="form-control" th:field="*{alias}"
-							required minlength="3" maxlength="64" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Parent Category:</label>
-					<div class="col-sm-8">
-						<select class="form-control" th:field="*{parent}">
-							<option value="0">[No Parent]</option>
-							
-							<th:block th:each="cat : ${listCategories}">
-								<option th:value="${cat.id}">[[${cat.name}]]</option>
-							</th:block>
-						</select>
-					</div>
-				</div>
-				
-				
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Image:</label>
-					<div class="col-sm-8">
-						<input type="hidden" th:field="*{image}" />
-						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg" th:required="${category.imagePath == null}"
-							class="mb-2"/>
-						
-						<div class="mt-2">
-							<img id="thumbnail" alt="image preview" th:src="@{${category.imagePath}}"
-								class="img-fluid" />
-						</div>	
-					</div>
-				</div>
-				
-				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">enabled:</label>
-					<div class="col-sm-8">
-						<input type="checkbox" class="m-2" th:field="*{enabled}" />
-					</div>
-				</div>
-				
-				<!-- cancel button added -->
-				<div class="text-center">
-					<input type="submit" value="Save" class="btn btn-primary m-2" /> <input
-						type="button" value="Cancel" class="btn btn-secondary"
-						id="buttonCancel" />
-				</div>
-
-			</div>
-		</form>
-		
-		<!-- show modal dialouge box show warning message if category not unique -->
-	<div class="modal fade text-center" id="modalDialog">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-tittle" id="modalTittle">Warning</h4>
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-				</div>
-				<div class="modal-body">
-					<span id="modalBody"></span>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
+<div class="container-fluid">
+	<div th:replace="navigation :: menu"></div>
+	<div>
+		<h2>Manage Categories | [[${pageTitle}]]</h2>	
 	</div>
-
+			
+	<form th:action="@{/categories/save}" method="post" style="max-width: 500px; margin: 0 auto"
+		enctype="multipart/form-data"
+		onsubmit="return checkUnique(this)"
+		th:object="${category}">
+		<input type="hidden" th:field="*{id}" />
+	<div class="border border-secondary rounded p-3">
+		<div class="form-group row">
+			<label class="col-sm-4 col-form-label">Category Name:</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="128"  />
+			</div>
+		</div>
+		
+		<div class="form-group row">
+			<label class="col-sm-4 col-form-label">Alias:</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" th:field="*{alias}" required minlength="3" maxlength="64"  />
+			</div>
+		</div>		
+		
+		<div class="form-group row">
+			<label class="col-sm-4 col-form-label">Parent Category:</label>
+			<div class="col-sm-8">
+				<select class="form-control" th:field="*{parent}">
+					<option value="0">[No Parent]</option>
+					
+					<th:block th:each="cat : ${listCategories}">
+					<option th:value="${cat.id}">[[${cat.name}]]</option>
+					</th:block>
+					
+				</select>
+			</div>
+		</div>		
+		
+		<div class="form-group row">
+			<label class="col-sm-4 col-form-label">Image:</label>
+			<div class="col-sm-8">
+				<input type="hidden" th:field="*{image}" />
+				<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg"
+					th:required="${category.imagePath == null}"
+					class="mb-2" />
+				
+				<div class="mt-2">
+					<img id="thumbnail" alt="Image preview" th:src="@{${category.imagePath}}"
+						class="img-fluid" />
+				</div>
+			</div>
+		</div>						
+				
+		<div class="form-group row">
+			<label class="col-sm-4 col-form-label">Enabled:</label>
+			<div class="col-sm-8">
+				<input type="checkbox" th:field="*{enabled}" />
+			</div>
+		</div>
+						
 		<div class="text-center">
-			<p>BuyMe Control Panel -Copyright &copy; BuyMe</p>
+			<input type="submit" value="Save" class="btn btn-primary m-3" />
+			<input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
 		</div>
 	</div>
-
+	</form>
+	
+	<div th:replace="modal_fragments :: modal_dialog"></div>
+	
+	<div th:replace="fragments :: footer"></div>
+	
+</div>
 <script type="text/javascript">
-		//script for cancel button  function
-		$(document).ready(function() {
-			$("#buttonCancel").on("click", function() {
-				window.location = "[[@{/categories}]]";
-			});
+	MAX_FILE_SIZE = 102400; // 100KB
+	moduleURL = "[[@{/categories}]]";
+	
+	function checkUnique(form) {
+		catId = $("#id").val();
+		catName = $("#name").val();
+		catAlias = $("#alias").val();
+		
+		csrfValue = $("input[name='_csrf']").val();
+		
+		url = "[[@{/categories/check_unique}]]";
+		
+		params = {id: catId, name: catName, alias: catAlias, _csrf: csrfValue};
+		
+		$.post(url, params, function(response) {
+			if (response == "OK") {
+				form.submit();
+			} else if (response == "DuplicateName") {
+				showWarningModal("There is another category having same name " + catName);	
+			} else if (response == "DuplicateAlias") {
+				showWarningModal("There is another category having same alias " + catAlias);
+			} else {
+				showErrorModal("Unknown response from server");
+			}
 			
-			$("#fileImage").change(function(){
-				fileSize= this.files[0].size;
-				//alert("file size is " + fileSize)
-				if(fileSize > 102400 * 2){
-					this.setCustomValidity("you must choose an image less than 200KB");
-					this.reportValidity();
-				}else{
-					this.setCustomValidity("");
-					showImageThumbnail(this);
-				}
-				        
-			});
+		}).fail(function() {
+			showErrorModal("Could not connect to the server");
 		});
 		
-		function showImageThumbnail(fileInput){
-			var file = fileInput.files[0];
-			var reader=new FileReader();
-			reader.onload=function(e){
-				$("#thumbnail").attr("src", e.target.result);
-			}
-			reader.readAsDataURL(file);
-		};
-		
-		function checkUnique(form){
-			catId = $("#id").val();
-			catName = $("#name").val();
-			catAlias = $("#alias").val();
-			
-			csrfValue = $("input[name='_csrf']").val();
-			
-			url = "[[@{/categories/check_unique}]]";
-			
-			params = {id: catId,name: catName,alias: catAlias, _csrf: csrfValue};
-			$.post(url,params,function(response){
-				if(response == "OK"){
-					form.submit();
-				}else if(response == "DuplicateName"){
-					showWarningModal("There is another category having same name " + catName)
-				}else if(response == "DuplicateAlias"){
-					showWarningModal("There is another category having same alias " + catAlias)
-				}else{
-					showErrorModal("Unknown response from server");
-				}
-			}).fail(function(){
-				showErrorModal("could not connect to server");
-			});
-			
-			return false;
-		}
-		
-		function showModalDialog(title, message) {
-			$("#modalTitle").text(title);
-			$("#modalBody").text(message);
-			$("#modalDialog").modal();
-			
-		}
-		
-		function showErrorModal(message){
-			showModalDialog("Error",message);
-		}
-		
-		function showWarningModal(message){
-			showModalDialog("Warning",message);
-		}
-		
-	</script>
+		return false;
+	}
+	
+</script>
+<script th:src="@{/js/common_form.js}"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
